# python-project-lvl3

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  constants.py  html.py  io.py  log.py  names.py  page_loader.py  url.py  web.py
page_loader/scripts/: __init__.py  page_loader_script.py
tests/: reader.py  test_download.py  test_html.py  test_names.py  test_page_loader.py  test_web.py
tests/fixtures/: correct_result.html
tests/fixtures/mock/: HTML.html  inner.html
